fix chat bug on small resolutions

--- a/css/_chat.scss
+++ b/css/_chat.scss
@@ -411,3 +411,11 @@
         color: white;
     }
 }
+
+
+@media (max-width: $sidebarWidth) {
+    #sideToolbarContainer,
+    #chatconversation {
+        width: 100%;
+    }
+}
